--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "description": "Simple In-memory job scheduler for Node.js",
   "main": "index.ts",
-  "dependencies": {},
+  "dependencies": {
+    "uuidv4": "^6.2.12"
+  },
   "devDependencies": {
+    "@types/node": "^16.9.1",
     "typescript": "^4.4.2"
   },
   "scripts": {
-		"build": "tsc -p tsconfig.json",
-		"lint": "eslint . --ext .ts"
-	},
+    "build": "tsc -p tsconfig.json",
+    "lint": "eslint . --ext .ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dhruvv90/node-job-scheduler.git"
