--- a/package.json
+++ b/package.json
@@ -7,12 +7,20 @@
     "uuidv4": "^6.2.12"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
+    "eslint": "^7.32.0",
+    "jest": "^27.1.1",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   },
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "test": "jest --config=jest.config.json",
+    "test:coverage": "jest --config=jest.config.json --coverage"
   },
   "repository": {
     "type": "git",
