--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/parser": "^4.31.0",
     "eslint": "^7.32.0",
     "jest": "^27.1.1",
+    "pre-commit": "^1.2.2",
     "ts-jest": "^27.0.5",
     "typescript": "^4.4.2"
   },
@@ -22,6 +23,11 @@
     "test": "jest --config=jest.config.json",
     "test:coverage": "jest --config=jest.config.json --coverage"
   },
+  "pre-commit": [
+    "build",
+    "lint",
+    "test"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/dhruvv90/node-job-scheduler.git"
