ignore Jest files from eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,5 +16,15 @@
         "@typescript-eslint"
     ],
     "rules": {
-    }
+    },
+    "overrides": [
+        {
+            "files": [
+                "**/*.test.js"
+            ],
+            "env": {
+                "jest": true
+            }
+        }
+    ]
 }
