Fix Package.json and rename Scheduler

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "x-node-job-scheduler",
-  "version": "1.0.1",
+  "name": "xnode-scheduler",
+  "version": "1.0.0",
   "description": "Simple In-memory job scheduler for Node.js",
-  "main": "index.ts",
+  "main": "dist/index.ts",
+  "types": "dist/index.d.ts",
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/node": "^16.9.1",
@@ -37,10 +38,16 @@
   },
   "keywords": [
     "scheduler",
+    "xnode-scheduler",
     "node-scheduler",
     "in-memory",
     "job",
     "task",
     "schedule"
+  ],
+  "files": [
+    "README.md",
+    "LICENSE",
+    "dist/*"
   ]
 }
