--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "target": "es5",
         "module": "commonjs",
-        "outDir": "out",
-        "sourceMap": true
+        "outDir": "dist",
+        "sourceMap": true,
+        "declaration": true
     }
 }
