--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "es5",
         "module": "commonjs",
         "outDir": "dist",
-        "sourceMap": true,
+        "sourceMap": false,
         "declaration": true
     }
 }
