--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,12 @@
         "target": "es5",
         "module": "commonjs",
         "outDir": "dist",
-        "sourceMap": false,
+        "sourceMap": true,
         "declaration": true
-    }
+    },
+    "exclude": [
+        "node_modules",
+        "dist",
+        "test"
+    ]
 }
